--- a/_includes/kindle-sidebar-info.html
+++ b/_includes/kindle-sidebar-info.html
@@ -31,12 +31,12 @@
 <ul>
   {%- for node in all_parents -%}
     <li>
-      <a href="{{ node.url | absolute_url }}"> {{ node.title }} </a>
+      <a href="{{site.baseurl}}{{ node.url }}"> {{ node.title }} </a>
       <ul>
         {%- for child in parent_children -%}
           {%- if child.parent == node.title -%}
             <li>
-              <a href="{{ child.url | absolute_url }}"> {{ child.title }} </a>
+              <a href="{{site.baseurl}}{{ child.url }}"> {{ child.title }} </a>
             </li>
           {%- endif -%}
         {%- endfor -%}
