just hack comments

--- a/_includes/kindle-sidebar-info.html
+++ b/_includes/kindle-sidebar-info.html
@@ -49,6 +49,17 @@
 <p>https://michaelcurrin.github.io/dev-cheatsheets/cheatsheets/jekyll/</p>
 <p>https://jekyllrb.com/docs/variables/</p>
 <p>https://stackoverflow.com/questions/34048313/jekyll-debug-or-print-all-variables</p>
+<p>
+  Jekyll/Liquid: Create fake-ish hash
+  https://gist.github.com/davidrleonard/0fc96dacfda6b6ad5828
+</p>
+<p>
+  Construct Hash in Jekyll/Liquid
+  https://stackoverflow.com/questions/27731021/construct-hash-in-jekyll-liquid
+</p>
+{%- endcomment -%}
+
+{%- comment -%}
 {{ site.pages | debug }}
 {{ site.pages | inspect }}
 <pre>
